# Test case:
#Credentials are required to log in

#open app
appId: org.khanacademy.android
---
#we open the app until the login menu
- runFlow:
    file: "../functions/sign_in/sign_in.yaml"


#we run the script with the credentials
- runScript: "../functions/secret/Credentials.js"

- tapOn: "Enter an e-mail address or username"
- inputText: "${output.invalidCredentials.invalidEmail}"


- tapOn: "Sign in"
#Expected result: that it cannot be pressed.
