# Test case:
#Credentials are required to log in
#open app
appId: org.khanacademy.android
---
#we open the app until the login menu
- runFlow:
    file: "../functions/sign_in/sign_in.yaml"

#we run the script with the invalid credentials
- runScript: "../functions/secret/Credentials.js"

- tapOn: "Password"
- inputText: "${output.invalidCredentials.invalidPassword}"


- tapOn: "Sign in"
#Expected result: that it cannot be pressed.
