# Test case:
#Credentials are required to log in
#open app
appId: org.khanacademy.android
---
#we open the app until the login menu
- runFlow:
    file: "../functions/sign_in/sign_in.yaml"


#we run the script with the scrips whith credentials
- runScript: "../functions/secret/Credentials.js"

- tapOn: "Enter an e-mail address or username"
- inputText: "${output.validCredentials.validEmail}"

- tapOn: "Password"
- inputText: "${output.validCredentials.validPassword}"


- tapOn: "Sign in"
#Expected result: There was an issue signing in.
